refactor: codebase refactor
* refactor: use Stream.toList()

* chore: format response handling

* refactor: update package naming

* refactor: remove empty path

* refactor: rename use cases for naming consistency

* refactor: extract hasRole method

* refactor: replace throw statements

* refactor: replace containsRole method

* refactor: extract message

* refactor: rename use case to generic name

* chore: update dependencies

* refactor: extract status to enum

* chore: reformat codebase using io.spring.javaformat

* docs: update README.md