@@ -2,7 +2,6 @@ package com.temani.temani.features.journal.usecase;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -14,16 +13,15 @@ import lombok.RequiredArgsConstructor;
 
 @Service
 @RequiredArgsConstructor
-public class GetAllJournalUseCaseImpl implements GetAllJournalsUseCase{
-    
-    private final JournalRepository journalRepository;
-    private final JournalDtoMapper mapper;
+public class GetAllJournalUseCaseImpl implements GetAllJournalsUseCase {
 
-    @Override
-    public List<JournalResponse> execute(UUID userId) {
-        return journalRepository.findAllByUserId(userId)
-        .stream()
-        .map(mapper::toDto)
-        .collect(Collectors.toList());
-    }
+	private final JournalRepository journalRepository;
+
+	private final JournalDtoMapper mapper;
+
+	@Override
+	public List<JournalResponse> execute(UUID userId) {
+		return journalRepository.findAllByUserId(userId).stream().map(mapper::toDto).toList();
+	}
+
 }
